fix(progress-indicator): top align progress step labels

--- a/packages/components/src/components/progress-indicator/_progress-indicator.scss
+++ b/packages/components/src/components/progress-indicator/_progress-indicator.scss
@@ -259,7 +259,8 @@
 
   .#{$prefix}--progress--vertical .#{$prefix}--progress-step,
   .#{$prefix}--progress--vertical .#{$prefix}--progress-step-button {
-    display: list-item;
+    display: block;
+    flex-direction: column;
     min-height: 3.625rem;
     width: initial;
     min-width: initial;
